--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'spbau'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
@@ -11,4 +12,10 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+mainClassName = 'ru.spbau.sazanovich.nikita.Main'
+
+run {
+    args System.getProperty("args", "").split()
 }
