--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'guru.nidi', name: 'graphviz-java', version: '0.2.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.9.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
