--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,11 @@ repositories {
 }
 
 dependencies {
+    compile group: 'com.google.guava', name: 'guava', version: '23.0'
     compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
     compile group: 'guru.nidi', name: 'graphviz-java', version: '0.2.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.9.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'com.google.truth', name: 'truth', version: '0.36'
 }
