--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,21 @@
 group 'spbau'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 apply plugin: 'java'
-apply plugin: 'application'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+jar {
+    manifest {
+        def manif = "${projectDir}/src/main/java/META-INF/MANIFEST.MF"
+        from file(manif)
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    baseName = "lexer"
+}
 
 repositories {
     mavenCentral()
@@ -13,10 +24,4 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'com.google.truth', name: 'truth', version: '0.36'
-}
-
-mainClassName = 'ru.spbau.sazanovich.nikita.Main'
-
-run {
-    args System.getProperty("args", "").split()
 }
