--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,20 @@
 group 'spbau'
-version '1.0-SNAPSHOT'
+version '1.0'
 
+buildscript {
+    ext.kotlin_version = '1.1.60'
+
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+apply plugin: 'antlr'
 apply plugin: 'java'
+apply plugin: 'kotlin'
 
 sourceCompatibility = 1.8
 
@@ -9,6 +22,26 @@ repositories {
     mavenCentral()
 }
 
+generateGrammarSource {
+    maxHeapSize = "64m"
+    arguments += ['-package', 'ru.spbau.mit.parser', '-visitor']
+    outputDirectory = new File("$buildDir/generated-src/antlr/main/ru/spbau/mit/parser")
+}
+compileJava.dependsOn generateGrammarSource
+compileKotlin.dependsOn generateGrammarSource
+
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.antlr:antlr4-runtime:4.7"
+    antlr "org.antlr:antlr4:4.7"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'com.google.truth', name: 'truth', version: '0.36'
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
